tests/negative/semantics/scope_leak.stream
// ERROR: Undefined variable 'secret'
if true {
    let secret = 999
}
print(secret)